2013-02-06  Roland Levillain  <roland@lrde.epita.fr>

	Equip Scribo with a recursive `tests' target.

	* Makefile.am (LOCAL_RECURSIVE_TARGETS): Remove pretty-check.
	($(LOCAL_RECURSIVE_TARGETS)): Recurse in scribo/ too.
	(pretty-check): New target, recursing only in milena/.
	* milena/tests/tests-recursive.mk: Move...
	* build-aux/tests-recursive.mk: ...here.
	* milena/tests/tests.mk: Adjust.
	Remove old comments.
	* scribo/Makefile.am (tests): New target.
	(bin): Use common idioms.
	* scribo/tests/tests.mk: Include milena/tests/tests-recursive.mk.

2010-10-27  Roland Levillain  <roland@lrde.epita.fr>

	Add advice about the release process.

	* HACKING (Required Software): Add LaTeX2HTML.
	Aesthetic changes.
	(Useful Tools): Rename as...
	(Useful Developer Tools): ...this.
	(Releasing): New section.

2012-10-05  Roland Levillain  <roland@lrde.epita.fr>

	Update texi2dvi from upstream.

	* build-aux/texi2dvi: Update from CVS Texinfo.

2012-10-05  Roland Levillain  <roland@lrde.epita.fr>

	Remove Trimesh sources from Olena.

	* external/trimesh/,
	* external/:
	Remove.
	* configure.ac,
	* README:
	Remove anything related to Trimesh.
	No longer configure external/Makefile.
	* Makefile.am (SUBDIRS): Remove external.

2012-10-05  Roland Levillain  <roland@lrde.epita.fr>

	No longer configure tests of apps depending on Trimesh.

	* configure.ac: No longer configure
	milena/apps/mesh-segm-skel/test-mesh-max-curv nor
	milena/apps/mesh-segm-skel/test-mesh-segm.

2012-06-20  Roland Levillain  <roland@lrde.epita.fr>

	Ensure `bootstrap -r' regenerates all files.

	* bootstrap: Here.
	Aesthetic changes.

2012-06-11  Roland Levillain  <roland@lrde.epita.fr>

	Remove non-distributed headers not required by Milena nor Scribo.

	* build-aux/generate_dist_headers.sh: No longer handle the third
	argument (list of non-distributed files).
	* milena/Makefile.am,
	* scribo/Makefile.am
	(regen-am, $(srcdir)/headers.mk): Adjust.
	(EXTRA_DIST): Remove nodist-headers.
	* milena/headers.mk,